--- a/public/scan-spec-google_2026_0209.html
+++ b/public/scan-spec-google_2026_0209.html
@@ -222,6 +222,8 @@
 
   .fig-container { display: flex; flex-direction: column; gap: 16px; }
   .msg-empty { text-align: center; padding: 20px; color: var(--text-sub); font-size: 13px; }
+  /* ★サムネイル（プレビュー）機能停止 */
+  /*#driveView { display: none !important; }
 
   /* --- Buttons --- */
   .btn {
@@ -721,37 +723,31 @@
     const {book, wc} = S.current;
     if(!book || !wc) return;
     const key = dieKey(book, wc);
-    // 同じ検索ならスキップ（連打防止）
     if(key === S.lastQueryKey) return; 
     S.lastQueryKey = key;
 
     D.errApi.textContent='';
     D.loading.style.display='inline';
     
-    // 表示エリアをリセット
+    // ★ 表示エリアを「即座に」完全に空にする（これが重要）
     D.gsBox.innerHTML = '<div class="msg-empty">読み込み中...</div>';
     D.driveActions.innerHTML = '';
-    D.driveView.innerHTML = '';
-    D.driveStatus.textContent = '検索中...'; // Driveも即座に「検索中」にする
+    D.driveView.innerHTML = ''; // ここを確実にクリア
+    D.driveStatus.textContent = '検索中...';
 
     try{
-      // 1. セッション確認 (これは必須なので待つ)
       await ensureCsrf();
 
-      // ★ここが並列処理のキモです★
-      // AとBを同時にスタートさせます（awaitしない）
-      const pSheet = fetchSpecs(book, wc);   // Sheets検索タスク
-      const pDrive = findDriveFiles(book, wc); // Drive検索タスク
+      // 並列で走らせる
+      const pSheet = fetchSpecs(book, wc);   
+      const pDrive = findDriveFiles(book, wc); 
 
-      // Sheetsの結果だけをここで待って表示制御（Driveは勝手に表示されます）
+      // Sheetsの完了を待つ（Driveは内部で表示まで完結させる）
       await pSheet; 
 
     }catch(e){
       D.errApi.textContent = e.message || e;
-      D.gsBox.innerHTML = '<div class="msg-empty">取得失敗</div>';
     }finally{
-      // 両方の処理が終わっていなくても、メインの「照会中」表示は消してOK
-      // (Driveがまだなら、Drive欄に「検索中」が残るため)
       D.loading.style.display='none';
     }
   }
@@ -782,7 +778,9 @@
       {k:'ItemName', l:'品名'}, {k:'Kname', l:'型名'},
       {k:'Material', l:'材質'}, {k:'Paper_Size', l:'原紙'},
       {k:'Cut_Size', l:'断裁'}, {k:'Location', l:'棚番'},
-      {k:'LastSeen', l:'確認日'}
+      {k:'LastSeen', l:'確認日'},
+      // ★追加：一番下
+      {k:'LastDelivery', l:'前回納品日'}
     ];
     let html = '<div class="spec-table">';
     fields.forEach(f => {
@@ -792,83 +790,92 @@
     html += '</div>';
     D.gsBox.innerHTML = html;
   }
-  async function findDriveFiles(book, wc){
-    try{
-      // fetchをスタート
-      const r = await fetch(`/api/drive-find?book=${encodeURIComponent(book)}&wc=${encodeURIComponent(wc)}`,{credentials:'same-origin',cache:'no-store'});
-      const j = await r.json();
-      
-      if(!j.ok){ 
-        D.driveStatus.textContent='検索エラー'; 
-        return; 
-      }
-
-      const cands = j.candidates || (j.fileId ? [{id:j.fileId, name:j.fileName}] : []);
-      if(!cands.length){
-        D.driveStatus.textContent = 'ファイルなし';
-        return;
-      }
-
-      D.driveStatus.textContent = `${cands.length}件ヒット`;
-
-      // 優先順位づけ (図面 > シール > PDF > その他)
-      const score = n => {
-        n = (n||'').toLowerCase();
-        if(/-zu\./.test(n)) return 1;
-        if(/-si\./.test(n)) return 2;
-        if(n.endsWith('.pdf')) return 3;
-        return 9;
-      };
-      cands.sort((a,b) => score(a.name||'') - score(b.name||''));
-
-      let btnHtml = '';
-      let imgHtml = ''; // ★画像のプレビュー用
-
-      cands.forEach(f => {
-        const name = f.name || '';
-        const isPdf = /\.pdf$/i.test(name);
-        const isImg = /\.(jpg|jpeg|png|gif)$/i.test(name); // 画像判定
-
-        let url;
-        if (isPdf) url = `https://drive.google.com/file/d/${f.id}/view`;
-        else url = `https://drive.google.com/uc?export=view&id=${f.id}`;
-
-        // ラベルとアイコン
-        let label = 'ファイル';
-        let icon = '📄';
-        let styleClass = 'drive-btn';
-
-        if(/-zu\./i.test(name)) { label = '図面 (-zu)'; icon='📐'; styleClass+=' primary-btn'; }
-        else if(/-si\./i.test(name)) { label = 'シール (-si)'; icon='🏷️'; }
-        else if(isPdf) { label = 'PDF'; icon='📑'; }
-        else if(isImg) { label = '画像'; icon='🖼️'; }
-
-        // ボタン生成
-        btnHtml += `<a href="${url}" target="_blank" class="${styleClass}">${icon} ${esc(label)}</a>`;
-
-        // ★改善点: 画像ならサムネイルを直接表示する
-        // Google DriveのサムネイルAPIを使用 (sz=w600 で幅600px指定)
-        if(isImg || /-zu\./i.test(name) || /-si\./i.test(name)){
-           const thumbUrl = `https://drive.google.com/thumbnail?id=${f.id}&sz=w600`;
-           // クリックで拡大できるようにリンクで囲む
-           imgHtml += `
-             <a href="${url}" target="_blank" style="display:block; border:1px solid #ddd; border-radius:8px; overflow:hidden;">
-               <img src="${thumbUrl}" style="width:100%; display:block;" loading="lazy" alt="${esc(name)}">
-               <div style="padding:4px 8px; font-size:11px; color:#666; background:#f9f9f9;">${esc(name)}</div>
-             </a>`;
+  // --- 関連ファイル検索・表示の修正版 ---
+// --- 関連ファイル検索・表示の修正版 ---
+async function findDriveFiles(book, wc) {
+  try {
+    const r = await fetch(
+      `/api/drive-find?book=${encodeURIComponent(book)}&wc=${encodeURIComponent(wc)}&t=${Date.now()}`,
+      {
+        credentials: 'same-origin',
+        cache: 'no-store',
+        headers: {
+          'Cache-Control': 'no-cache, no-store, must-revalidate',
+          'Pragma': 'no-cache'
         }
-      });
+      }
+    );
+    const j = await r.json();
 
-      D.driveActions.innerHTML = btnHtml;
-      D.driveView.innerHTML = imgHtml; // 画像エリアに挿入
+    // 表示エリアを完全にリセット
+    D.driveActions.innerHTML = '';
+    D.driveView.innerHTML = '';
 
-    }catch(e){
-      console.error(e);
-      D.driveStatus.textContent = '検索失敗';
+    if (!j.ok) {
+      D.driveStatus.textContent = '検索エラー';
+      D.driveView.innerHTML = '<div class="msg-empty">取得に失敗しました</div>';
+      return;
     }
-  }
 
-  // ▲▲▲ ここまで書き換え ▲▲▲
+    const cands = j.candidates || (j.fileId ? [{ id: j.fileId, name: j.fileName }] : []);
+    if (!cands.length) {
+      D.driveStatus.textContent = 'ファイルなし';
+      D.driveView.innerHTML = '<div class="msg-empty">関連ファイルはありません</div>';
+      return;
+    }
+
+    D.driveStatus.textContent = `${cands.length}件ヒット`;
+
+    // 優先順位ソート（図面→シール→その他）
+    const score = (n) => {
+      n = (n || '').toLowerCase();
+      if (/-zu\./.test(n)) return 1;
+      if (/-si\./.test(n)) return 2;
+      if (/\.pdf$/.test(n)) return 3;
+      return 9;
+    };
+    cands.sort((a, b) => score(a.name) - score(b.name));
+
+    // 1) ボタン（リンク）のみ生成
+    for (const f of cands) {
+      const id = f.id;
+      const name = f.name || '';
+      const isPdf = /\.pdf$/i.test(name);
+
+      const url = isPdf
+        ? `https://drive.google.com/file/d/${id}/view`
+        : `https://drive.google.com/uc?export=view&id=${id}`;
+
+      // ラベル
+      let label = 'ファイル';
+      let icon = '📄';
+      let cls = 'drive-btn';
+      if (/-zu\./i.test(name)) { label = '図面'; icon = '📐'; cls += ' primary-btn'; }
+      else if (/-si\./i.test(name)) { label = 'シール'; icon = '🏷️'; }
+      else if (isPdf) { label = 'PDF'; icon = '📑'; }
+      else if (/\.(jpg|jpeg|png|gif)$/i.test(name)) { label = '画像'; icon = '🖼️'; }
+
+      const btn = document.createElement('a');
+      btn.href = url;
+      btn.target = '_blank';
+      btn.rel = 'noopener';
+      btn.className = cls;
+      btn.textContent = `${icon} ${label}`;
+      D.driveActions.appendChild(btn);
+    }
+
+    // 2) サムネは一時停止（メッセージだけ）
+    D.driveView.innerHTML = '<div class="msg-empty">サムネイル表示は一時停止中です</div>';
+
+  } catch (e) {
+    console.error('Drive API Error:', e);
+    D.driveStatus.textContent = '検索失敗';
+    D.driveView.innerHTML = '<div class="msg-empty">検索に失敗しました</div>';
+  }
+}
+
+
+
 
   // --- Events ---
   D.btnStart.onclick = startCam;
