--- a/public/scan-spec-google_2026_0227.html
+++ b/public/scan-spec-google_2026_0227.html
@@ -223,7 +223,7 @@
   .fig-container { display: flex; flex-direction: column; gap: 16px; }
   .msg-empty { text-align: center; padding: 20px; color: var(--text-sub); font-size: 13px; }
   /* ★サムネイル（プレビュー）機能停止 */
-  /*#driveView { display: none !important; }
+  /*#driveView { display: none !important; } /*
 
   /* --- Buttons --- */
   .btn {
@@ -491,8 +491,9 @@
 
   async function startCam(){
     S.locked=false;
+    S.lastQueryKey = ''; // ★追加：カメラ起動時に前回の検索履歴をリセットし、同じQRでも再取得する
     stopCam(); // 既存停止（解放）
-
+    
     D.errCam.textContent='';
     D.freeze.style.display='none';
     D.video.style.visibility='visible';
@@ -864,40 +865,8 @@ async function findDriveFiles(book, wc) {
       D.driveActions.appendChild(btn);
     }
 
-    // 2) サムネイル表示（有効化）: Service Account 経由の /api/drive-thumb を優先し、
-    //    エラー時には Google Drive の直接 UC URL にフォールバックする。
-    //    各画像にはキャッシュバスターを付与して更新を反映しやすくする。
-    const imgCands = cands.filter(f => /\.(jpg|jpeg|png|gif)$/i.test(f.name || ''));
-    if (!imgCands.length) {
-      D.driveView.innerHTML = '<div class="msg-empty">サムネイル表示は一時停止中です</div>';
-    } else {
-      D.driveView.innerHTML = '';
-      for (const fimg of imgCands) {
-        const fid = fimg.id;
-        const fname = fimg.name || '';
-
-        const img = document.createElement('img');
-        img.alt = fname;
-        img.loading = 'lazy';
-        img.style.maxWidth = '320px';
-        img.style.borderRadius = '8px';
-        img.style.display = 'block';
-        img.style.marginTop = '8px';
-
-        // 優先: own API proxy (no-cache headers)
-        img.src = `/api/drive-thumb?id=${encodeURIComponent(fid)}&t=${Date.now()}`;
-
-        // フォールバック: drive.uc (キャッシュバスター付き)
-        img.onerror = () => {
-          img.onerror = null;
-          img.src = `https://drive.google.com/uc?export=view&id=${encodeURIComponent(fid)}&t=${Date.now()}`;
-        };
-
-        const fig = document.createElement('div');
-        fig.appendChild(img);
-        D.driveView.appendChild(fig);
-      }
-    }
+    // 2) サムネイル表示（機能を一時停止し、通信も行わない）
+    D.driveView.innerHTML = '<div class="msg-empty">サムネイル表示は一時停止中です</div>';
 
   } catch (e) {
     console.error('Drive API Error:', e);
@@ -910,9 +879,25 @@ async function findDriveFiles(book, wc) {
 
 
   // --- Events ---
-  D.btnStart.onclick = startCam;
+  // --- Events ---
+  D.btnStart.onclick = async () => {
+    // ★追加：連打によるカメラの多重起動（メモリリーク）を防止
+    if (D.btnStart.disabled) return; 
+    D.btnStart.disabled = true;
+    await startCam();
+  };
   D.btnStop.onclick = () => stopCam();
   window.onresize = fitAll;
+
+  // ★追加：別アプリへの切り替えや画面スリープ時に確実にカメラを解放する
+  document.addEventListener('visibilitychange', () => {
+    if (document.hidden && S.stream) {
+      console.log('バックグラウンドに移行したためカメラを停止します');
+      stopCam();
+    }
+  });
+
+   
 
   D.btnManual.onclick = () => {
     const b = D.inpBook.value.trim();
